production/model-platform/tekton/artifact-publish/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: artifact-publish
  labels:
    app.kubernetes.io/part-of: model-platform
    app.kubernetes.io/component: artifact-publish
